--- a/admin/config.yml
+++ b/admin/config.yml
@@ -5,53 +5,128 @@ backend:
 media_folder: "images"
 public_folder: "/images"
 
-collections:
-  - name: "products"
-    label: "Products"
-    folder: "_products"
-    create: true
-    slug: "{{slug}}"
-    fields:
-      - {label: "Name", name: "title", widget: "string"}
-      - {label: "Category", name: "category", widget: "select", options: ["reels", "rods", "lines", "accessories"]}
-      - {label: "Price (EUR)", name: "price", widget: "number", value_type: "float"}
-      - {label: "Image URL", name: "image", widget: "string"}
-      - {label: "Specs", name: "specs", widget: "string"}
-      - {label: "Badge", name: "badge", widget: "string", required: false}
-      - {label: "Description", name: "body", widget: "markdown", required: false}
+locale: "en"
 
-  - name: "team"
-    label: "Team Members"
-    folder: "_team"
+collections:
+  # ===== PRODUCTS =====
+  - name: "products"
+    label: "🛒 Products"
+    label_singular: "Product"
+    folder: "_data/products"
     create: true
     slug: "{{slug}}"
+    extension: "json"
+    format: "json"
     fields:
-      - {label: "Name", name: "title", widget: "string"}
+      - {label: "Product Name", name: "name", widget: "string"}
+      - {label: "Category", name: "category", widget: "select", options: 
+          [{label: "Carp Reels", value: "reels"}, 
+           {label: "Rods", value: "rods"}, 
+           {label: "Lines & Braids", value: "lines"},
+           {label: "Accessories", value: "accessories"}]}
+      - {label: "Price (EUR)", name: "price", widget: "number", value_type: "float", min: 0}
+      - {label: "Image URL", name: "image", widget: "string"}
+      - {label: "Specifications", name: "specs", widget: "string", hint: "e.g. 9+1 BB • Baitrunner • Metal Spool"}
+      - {label: "Badge", name: "badge", widget: "select", required: false, options: 
+          [{label: "None", value: ""}, 
+           {label: "Bestseller", value: "Bestseller"}, 
+           {label: "New", value: "New"},
+           {label: "Popular", value: "Popular"},
+           {label: "Pro Choice", value: "Pro Choice"}]}
+      - {label: "Featured", name: "featured", widget: "boolean", default: true}
+      - {label: "Order", name: "order", widget: "number", default: 0}
+
+  # ===== TEAM =====
+  - name: "team"
+    label: "👥 Team"
+    label_singular: "Team Member"
+    folder: "_data/team"
+    create: true
+    slug: "{{slug}}"
+    extension: "json"
+    format: "json"
+    fields:
+      - {label: "Name", name: "name", widget: "string"}
       - {label: "Role", name: "role", widget: "string"}
       - {label: "Photo URL", name: "photo", widget: "string"}
       - {label: "Bio", name: "bio", widget: "text"}
+      - {label: "Order", name: "order", widget: "number", default: 0}
 
+  # ===== REVIEWS =====
   - name: "reviews"
-    label: "Reviews"
-    folder: "_reviews"
+    label: "⭐ Reviews"
+    label_singular: "Review"
+    folder: "_data/reviews"
     create: true
     slug: "{{slug}}"
+    extension: "json"
+    format: "json"
     fields:
-      - {label: "Customer Name", name: "title", widget: "string"}
+      - {label: "Customer Name", name: "name", widget: "string"}
       - {label: "Country", name: "country", widget: "string"}
-      - {label: "Country Flag", name: "flag", widget: "string"}
-      - {label: "Rating (1-5)", name: "rating", widget: "number", min: 1, max: 5}
+      - {label: "Flag Emoji", name: "flag", widget: "string", hint: "e.g. 🇩🇪 🇵🇱 🇫🇷"}
+      - {label: "Rating", name: "rating", widget: "select", options: ["5", "4", "3", "2", "1"], default: "5"}
       - {label: "Review Text", name: "text", widget: "text"}
       - {label: "Product", name: "product", widget: "string"}
+      - {label: "Order", name: "order", widget: "number", default: 0}
 
+  # ===== FAQ =====
+  - name: "faq"
+    label: "❓ FAQ"
+    label_singular: "FAQ Item"
+    folder: "_data/faq"
+    create: true
+    slug: "{{slug}}"
+    extension: "json"
+    format: "json"
+    fields:
+      - {label: "Question", name: "question", widget: "string"}
+      - {label: "Answer", name: "answer", widget: "text"}
+      - {label: "Order", name: "order", widget: "number", default: 0}
+
+  # ===== SITE SETTINGS =====
   - name: "settings"
-    label: "Site Settings"
+    label: "⚙️ Settings"
     files:
+      - name: "hero"
+        label: "🏠 Hero Section"
+        file: "_data/settings/hero.json"
+        fields:
+          - {label: "Badge Text", name: "badge", widget: "string"}
+          - {label: "Title", name: "title", widget: "string"}
+          - {label: "Highlight Word", name: "highlight", widget: "string"}
+          - {label: "Description", name: "description", widget: "text"}
+          - {label: "Button 1 Text", name: "btn1", widget: "string"}
+          - {label: "Button 2 Text", name: "btn2", widget: "string"}
+
+      - name: "about"
+        label: "ℹ️ About Section"
+        file: "_data/settings/about.json"
+        fields:
+          - {label: "Title", name: "title", widget: "string"}
+          - {label: "Text 1", name: "text1", widget: "text"}
+          - {label: "Text 2", name: "text2", widget: "text"}
+          - {label: "Image URL", name: "image", widget: "string"}
+          - {label: "Stat 1 Number", name: "stat1_num", widget: "string"}
+          - {label: "Stat 1 Label", name: "stat1_label", widget: "string"}
+          - {label: "Stat 2 Number", name: "stat2_num", widget: "string"}
+          - {label: "Stat 2 Label", name: "stat2_label", widget: "string"}
+          - {label: "Stat 3 Number", name: "stat3_num", widget: "string"}
+          - {label: "Stat 3 Label", name: "stat3_label", widget: "string"}
+
+      - name: "contact"
+        label: "📞 Contact"
+        file: "_data/settings/contact.json"
+        fields:
+          - {label: "Email", name: "email", widget: "string"}
+          - {label: "Phone", name: "phone", widget: "string"}
+          - {label: "Address", name: "address", widget: "string"}
+          - {label: "Hours", name: "hours", widget: "string"}
+
       - name: "general"
-        label: "General Settings"
-        file: "_data/settings.yml"
+        label: "🌐 General"
+        file: "_data/settings/general.json"
         fields:
           - {label: "Site Title", name: "title", widget: "string"}
-          - {label: "Phone", name: "phone", widget: "string"}
-          - {label: "Email", name: "email", widget: "string"}
-          - {label: "Address", name: "address", widget: "string"}
+          - {label: "Description", name: "description", widget: "text"}
+          - {label: "Copyright", name: "copyright", widget: "string"}
